# fpkgi-server

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  fpkgi-server.service
.github/workflows/: build.yml
docs/: 404_resolution.md  sorting.md
src/: args.rs  enums.rs  json_builder.rs  main.rs  ps4_package.rs  server.rs  sfo_processor.rs  utils.rs  watcher.rs
