[package]
name = "fpkgi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde_json = "1.0"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
hyper = { version = "1.4", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
clap = { version = "4", features = ["derive"] }
percent-encoding = "2"
notify = "8.0"
