[package]
name = "fpkgi-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-files = "0.6"
anyhow = "1.0"
serde_json = "1.0"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.40", features = ["full"] }
clap = { version = "4", features = ["derive"] }
percent-encoding = "2"
notify = "8.0"
walkdir = "2"
